--- a/templates/home.html
+++ b/templates/home.html
@@ -6,58 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jobs</title>
   <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='fvc.png') }}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    h1 {
-      font-size: 50px;
-      font-family: Tahoma;
-      font-weight: normal;
-      color: rgb(50, 50, 50);
-      text-align: center;
-    }
-
     #banner {
-      width: 100%;
       height: 360px;
+      width: 100%;
       object-fit: cover;
-    }
-
-    h2 {
-      font-size: 32px;
-      font-family: Tahoma;
-      font-weight: normal;
-      color: rgb(100, 100, 100);
-      text-align: center;
-    }
-
-    p {
-      font-family: Tahoma;
-      color: rgb(0, 0, 0);
-    }
-
-    .bodytext {
-      font-family: Tahoma;
-      color: rgb(100, 50, 25);
-    }
-
-    #container {
-      max-width: 720px;
-      margin: 0 auto;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <h1>UNIUYO Entreprenureship Training</h1>
-    <img id="banner" src="/static/task.jpg" height="320">
-    <h2>About UNIUYO Entreprenureship</h2>
-    <p class="bodytext">
+  <div class="container">
+    <h1 class="text-center mt-4 mb-4">UNIUYO Entreprenureship Training</h1>
+    <img class="img-fluid" id="banner" src="/static/task.jpg">
+    <h2 class="text-center mt-3 mb-3">About UNIUYO Entreprenureship</h2>
+    <p class="lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit aliquet nisi, sit amet bibendum nunc. Sed pharetra justo non accumsan bibendum. Nunc id fringilla nunc. Etiam cursus ornare ligula sit amet tincidunt. Vestibulum non fringilla sapien, sit amet suscipit lorem. Curabitur tempor ligula fermentum erat imperdiet, at feugiat lacus sollicitudin. Vestibulum nibh metus, aliquam at dignissim eget, bibendum eget metus. Nam malesuada nunc ac arcu volutpat, ac commodo augue feugiat. Quisque efficitur, purus at posuere pharetra, arcu massa tincidunt purus, vitae imperdiet leo libero ac quam. Proin congue libero sem, vel semper tellus ultrices vel. Aliquam erat volutpat.
     </p>
-    <h2>Tutorial Openings</h2>
-    <p class="bodytext">TODO - Show the jobs here</p>
-    <div style="text-align:center;">
-      <button>Contact Us</button>
-      <p>Copyright 2024, UNIUYO</p>
+    <h2 class="text-center mt-2 mb-4">Tutorial Openings</h2>
+    <p>TODO - Show the jobs here</p>
+    <div class="text-center">
+      <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+      <p class="mt-2">Copyright 2024, UNIUYO</p>
     </div>
   </div>
 </body>
