--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,11 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit aliquet nisi, sit amet bibendum nunc. Sed pharetra justo non accumsan bibendum. Nunc id fringilla nunc. Etiam cursus ornare ligula sit amet tincidunt. Vestibulum non fringilla sapien, sit amet suscipit lorem. Curabitur tempor ligula fermentum erat imperdiet, at feugiat lacus sollicitudin. Vestibulum nibh metus, aliquam at dignissim eget, bibendum eget metus. Nam malesuada nunc ac arcu volutpat, ac commodo augue feugiat. Quisque efficitur, purus at posuere pharetra, arcu massa tincidunt purus, vitae imperdiet leo libero ac quam. Proin congue libero sem, vel semper tellus ultrices vel. Aliquam erat volutpat.
     </p>
     <h2 class="text-center mt-2 mb-4">Tutorial Openings</h2>
-    <p>TODO - Show the jobs here</p>
+    <div>
+      {% for job in jobs %}
+      {% include 'joblist.html' %}
+      {% endfor %}
+    </div>
     <div class="text-center">
       <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
       <p class="mt-2">Copyright 2024, UNIUYO</p>
