--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jobs</title>
+  <title>UniJobs</title>
   <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='fvc.png') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
@@ -18,27 +18,32 @@
 </head>
 <body>
   {% include 'nav.html' %}
-  <img class="img-fluid" id="banner" src="/static/task.jpg">
+  <div style="margin: 0 auto;">
+  <img class="img-fluid" id="banner" src="/static/shake.jpg">
+  </div>
   <div class="container">
-    <h1 class="text-center mt-4 mb-4">UNIUYO Entreprenureship Training</h1>
+    <h1 class="text-center mt-4 mb-4">UNI Tutors' Employment</h1>
     <div class="row" style="margin-bottom: 16px; margin: 0 auto">
-      <div class="col-md-6">
+      <div class="col-md-8">
     <p class="lead">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit aliquet nisi, sit amet bibendum nunc. Sed pharetra justo non accumsan bibendum. Nunc id fringilla nunc. Etiam cursus ornare ligula sit amet tincidunt. Vestibulum non fringilla sapien, sit amet suscipit lorem. Curabitur tempor ligula fermentum erat imperdiet, at feugiat lacus sollicitudin. Vestibulum nibh metus, aliquam at dignissim eget, bibendum eget metus. Nam malesuada nunc ac arcu volutpat, ac commodo augue feugiat. Quisque efficitur, purus at posuere pharetra, arcu massa tincidunt purus, vitae imperdiet leo libero ac quam. Proin congue libero sem, vel semper tellus ultrices vel. Aliquam erat volutpat.
+      Our university’s career services office offers a dedicated platform for those seeking academic and administrative positions. Through our online portal, you can explore job openings, apply for positions, and access resources tailored to the university hiring process. This platform provides a convenient way to connect with potential employers and explore career opportunities within our institution.
+    <p class="lead">
+      In addition to job postings, our portal offers a variety of resources to assist you in your job search. These resources include resume and cover letter templates, interview preparation materials, and career counseling services. Our experienced career counselors are available to provide personalized guidance and support throughout your job search process.
+    </p>
     </p>
       </div>
-      <div class = "d-none d-md-block col-md-6">
+      <div class = "d-none d-md-block col-md-4">
       <img src="/static/work.jpg" style="height: 300px; border-radius: 4px;">
       </div>
     </div>
-    <h2 class="text-center mt-2 mb-4">Course Openings</h2>
+    <h2 class="text-center mt-2 mb-4">Job Openings</h2>
     <div>
       {% for job in jobs %}
       {% include 'joblist.html' %}
       {% endfor %}
     </div>
     <div class="text-center">
-      <a href="mailto:praisxz@gmail.com?subject=Question(s)%20about%20job%20openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cquestion%20here%3E" type="button" class="btn btn-primary btn-lg">Contact Us</a>
+      <a href="mailto:support.unijobs@gmail.com?subject=Question(s)%20about%20job%20openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cquestion%20here%3E" type="button" class="btn btn-primary btn-lg">Contact Us</a>
     </div>
   </div>
   {% include 'footer.html' %}
