--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +43,7 @@
       {% endfor %}
     </div>
     <div class="text-center">
-      <a href="mailto:support.unijobs@gmail.com?subject=Question(s)%20about%20job%20openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cquestion%20here%3E" type="button" class="btn btn-primary btn-lg">Contact Us</a>
+      <a href="mailto:support.unijobs@gmail.com?subject=Question(s)%20about%20job%20openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cquestion%20here%3E" type="button" class="btn btn-primary btn-lg mt-4">Contact Us</a>
     </div>
   </div>
   {% include 'footer.html' %}
