--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -13,6 +13,6 @@
     {% endif %}
   </div>
   <div class="col-3">
-    <a href="mailto:jobs.unijobs@gmail.com?cc=hr.unijobs@gmail.com&subject=Apllication%20for%20the%20vacancy%3A%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20LinkedIn%20link%3A%20%3Clinkedin%20link%3E" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
   </div>
 </div>
