--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-body-tertiary shadow-sm fixed-top" style="background-color: #e3f2fd;">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="#">
+    <a class="navbar-brand fw-bold" href="/">
       <img src="/static/fvc.png" alt="Logo" width="30" height="auto" class="d-inline-block align-text-top ms-1">
       UniJobs
     </a>
