--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@
 
 body {
     font-family: 'OpenSans', sans-serif;
-    background-color: #f8f8f8;
+    background-color: #e1d4d4;
 }
 
 .container {
