--- a/templates/index.html
+++ b/templates/index.html
@@ -14,18 +14,18 @@
         </div>
         <div class="content">
             <h1>Welcome to UniJobs</h1>
-            <pre>
+            <b><pre>
 An intuitive employment portal for
-Fury Road University</pre>
+Fury Road University</pre></b>
             <a href="/listings"><button class="listings-btn">See listings</button></a>
             <div class="social-icons">
-                <a href="#" target="_blank">
+                <a href="https://x.com/1301ek?t=ky2-HdJLu4U6dmD9n63xNQ&s=09" target="_blank">
                     <img src="/static/images/x logo.png" alt="Twitter">
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.instagram.com/1301ek?igsh=Zmg5c2lkcmJ3emJ6" target="_blank">
                     <img src="/static/images/ig logo.png" alt="Instagram">
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=61563390615921" target="_blank">
                     <img src="/static/images/fb logo.png" alt="facebook">
                 </a>
             </div>
@@ -34,6 +34,5 @@ Fury Road University</pre>
             <img src="/static/images/shake.jpeg" alt="People shaking hands" class="hero-img">
         </div>
     </div>
-    {% include 'footer.html' %}
 </body>
 </html>
