--- a/templates/listings.html
+++ b/templates/listings.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Positions - UniJobs</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/fvc.png') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f0f0f0;
+            font-family: 'OpenSans', sans-serif;
+            background-color: #e1d4d4;
         }
 
         h1 {
             text-align: center;
             margin-bottom: 30px;
+            font-weight: bolder;
         }
 
         .boxes {
@@ -48,6 +50,7 @@
         }
 
         h2 {
+            font-weight: bold;
             margin-top: 0;
         }
 
@@ -74,7 +77,9 @@
         {% for job in jobs %}
         <div class="positions-container">
             <div class="position-card">
-                <div class="position-image"></div>
+                <div class="position-image">
+                    {% include 'listimgs.html' %}
+                </div>
                 <div class="position-content">
                     <h2>{{job['title']}}</h2>
                     <div>
